Modificação dos enunciados dos exercícios

--- a/dicionarios.ipynb
+++ b/dicionarios.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdruf5ACFecHHEu37lhF6K",
+      "authorship_tag": "ABX9TyMJGCJNMMHtXwYAZfoOL2YG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "EXERCICIO 1\n",
+        "**EXERCICIO 1 **\n",
+        "\n",
+        "Crie uma agenda com 5 cadastros que possua nome (chave) e telefone (valor), após peça\n",
+        "para digitar um nome e retorne se está no dicionário ou não.\n",
         "\n"
       ],
       "metadata": {
@@ -53,7 +56,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "EXERCICIO 2"
+        "**EXERCICIO 2 **\n",
+        "\n",
+        "Crie um programa que peça um nome e número de telefone, crie uma agenda com 5\n",
+        "cadastros, após isso imprima toda a agenda com o nome e o número correspondente:"
       ],
       "metadata": {
         "id": "AKrNeFv6YOU_"
@@ -146,7 +152,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "EXERCICIO 3    INCOMPLETO"
+        "**EXERCICIO 3    INCOMPLETO**"
       ],
       "metadata": {
         "id": "lxF4RaXTRfv9"
@@ -179,7 +185,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "11.1 EXERCICIOS DICIONÁRIO"
+        "**11.1 EXERCICIOS DICIONÁRIO**"
       ],
       "metadata": {
         "id": "xUT7O5hdPo8Y"
@@ -213,7 +219,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "EXERCICIO 3"
+        "**EXERCICIO 3**"
       ],
       "metadata": {
         "id": "CjRg10VPVKZi"
@@ -236,7 +242,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "EXERCICIO 4"
+        "**EXERCICIO 4**"
       ],
       "metadata": {
         "id": "svq4sqhMVsMr"
@@ -259,7 +265,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "DESAFIO DICIONÁRIO"
+        "**DESAFIO DICIONÁRIO**\n",
+        "\n",
+        "Você foi contratado para desenvolver um sistema de gestão de estoque para uma loja. O estoque é representado por um dicionário, onde as chaves são os nomes dos produtos e os valores são as quantidades disponíveis. O sistema deve permitir as seguintes operações:\n",
+        "\n",
+        "Adicionar um novo produto ao estoque.\n",
+        "Remover um produto do estoque.\n",
+        "Atualizar a quantidade de um produto no estoque.\n",
+        "Exibir a lista de produtos disponíveis e suas quantidades.\n",
+        "Implemente um programa que permita ao usuário realizar essas operações de forma interativa. O programa deve exibir um menu com as opções disponíveis e solicitar a entrada do usuário para selecionar uma opção\n",
+        "\n"
       ],
       "metadata": {
         "id": "EXNJC_U_WPao"
@@ -316,7 +331,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "12. DICIONARIOS PARTE 2 EXERCICIOS"
+        "**12. DICIONARIOS PARTE 2 EXERCICIOS**\n",
+        "\n",
+        "Observe que no código acima i recebe em cada Lopp um dicionário. Faça com que o programa\n",
+        "percorra item por item de cadastro"
       ],
       "metadata": {
         "id": "9GjIal8XfR6S"
@@ -345,7 +363,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "exercicio 2"
+        "**exercicio 2**\n",
+        "\n",
+        "Preencha mínimo 3 cadastros, coloque todos dentro de uma lista.\n"
       ],
       "metadata": {
         "id": "lJyHhvT5BG1X"
@@ -382,7 +402,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "exercicio 3"
+        "**exercicio 3**\n",
+        "\n",
+        "Faça um loop onde tenha acesso individual de cada elemento do dicionário aninhado\n"
       ],
       "metadata": {
         "id": "1mNbzg9YC1eO"
@@ -409,7 +431,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "exercico 4"
+        "**exercicio 4**\n",
+        "\n",
+        "Preencha um dicionário aninhado informando o cpf, nome, telefone e endereço, utilize o cpf\n",
+        "como chave principal do dicionário externo\n"
       ],
       "metadata": {
         "id": "gRRuw3hsI_4B"
@@ -443,7 +468,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "exercicio 5"
+        "**exercicio 5 **\n",
+        "\n",
+        "Com os cadastros realizados, faça com que seu programa seja capaz de pesquisar algum\n",
+        "cadastro pelo cpf."
       ],
       "metadata": {
         "id": "NkDfBT9GNNy-"
@@ -484,7 +512,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "exercicio 6"
+        "**exercicio 6**\n",
+        "\n",
+        "Faça com que o usuário consiga digitar o cpf, se existir o cpf, após vai pedir para digitar outro\n",
+        "campo, nome, telefone ou endereço. Por fim vai atualizar os dados informado no dicionário"
       ],
       "metadata": {
         "id": "XVxveFuGOZ7K"
@@ -520,7 +551,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Atividade extra"
+        "**Atividade extra**\n",
+        "\n",
+        "Crie uma estrutura de dados conforme abaixo, esta estrutura vai ter\n",
+        "a) um nome de aluno como chave de um dicionário, dentro deste dicionário vai ter outro\n",
+        "dicionário, com as chaves notas, média e situação.\n",
+        "b) O valor de notas vai ser uma lista com 3 notas.\n",
+        "c) O valor de média vai ser a media das notas\n",
+        "d) O valor de situação vai ser “Aprovado” ou “Reprovado”\n",
+        "Crie um sistema onde possa preencher as notas e imprimir as notas, a média e a situação de\n",
+        "cada aluno."
       ],
       "metadata": {
         "id": "6KmQhUTKvSMM"
